# dedih-cicd-devsecops

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: main.py  models.py
tests/: test_main.py
