[project]
name = "dedih-cicd-devsecops"
version = "0.1.0"
description = "DEDIH 2.0 CI/CD és DevSecOps kurzus demo repo"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
